# GPTel

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/basic/: README.md  main.py
src/gptel/: __init__.py  base.py  bot.py  client.py  services.py  telegram_client.py  utils.py
tests/: test_app.py
